修復:計算跟取得ROI資料的錯誤、現金流量結果錯誤、更新現金流量時會找不到歷史資料